# hack-a-gallery

./: docker-compose.yml  netlify.toml  next.config.ts  package-lock.json  package.json
.kiro/steering/: dynamodb-backend-patterns.md  frontend-standards.md  hackagallery_agents.md  testing-patterns.md
agents/: .bedrock_agentcore.yaml  .dockerignore  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agents/.bedrock_agentcore/main/: Dockerfile
agents/.bedrock_agentcore/src_project_intelligence_agent/: Dockerfile
agents/scripts/: test_agent_http.ps1  test_agent_http.sh  test_refactored_agent.py  test_regression.py
agents/src/: __init__.py  project_intelligence_agent.py  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  samconfig.toml  template-with-secrets.yaml
backend/app/: __init__.py  config.py  main.py  models.py
backend/app/routers/: projects.py  workflows.py
backend/app/services/: agent_client.py  cache.py  error_handler.py  github_validator.py  orchestrator.py
backend/scripts/: setup-secrets.ps1  setup-secrets.sh  test_api_local.py  test_single_repo.py  test_with_curl.ps1  test_with_curl.sh
backend/tests/: test_agent_client.py  test_error_handler.py  test_github_validator.py
frontend/: amplify.yml  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  vitest.config.ts
frontend/infrastructure/: README.md
frontend/messages/: zh-CN.json
frontend/scripts/: clear-dynamodb-data.js  curl-format.txt  deploy-cloudformation.js  seed-aws-data-comprehensive.js  seed-aws-data.js  seed-local-data.js  setup-dynamodb-local.js  test-cold-start-performance.js  test-health-endpoint.js  test-integration.js  test-seed-data.js
infrastructure/: README.md
infrastructure/cloudformation/: dynamodb-table.yaml
scripts/: seed-aws-data.js  start-dynamodb-local.js  stop-dynamodb-local.js
src/app/: error.tsx  (+3 more)
(+140 files in other folders)
