[project]
name = "project-intelligence-agent"
version = "0.1.0"
description = "AI agent for analyzing GitHub repositories using Amazon Bedrock AgentCore"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore==1.0.3",
    "bedrock-agentcore-starter-toolkit==0.1.26",
    "strands-agents==1.13.0",
    "strands-agents-tools==0.2.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
