[project]
name = "project-intelligence-backend"
version = "0.1.0"
description = "Agent orchestration service for project intelligence"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.119.0",
    "uvicorn[standard]==0.38.0",
    "boto3>=1.40.0",
    "pydantic==2.12.3",
    "pydantic-settings==2.11.0",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = ["ruff>=0.14.0", "pytest>=8.4.0", "pytest-asyncio>=1.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
